# Attributes (temp)
if(APPLE)
	set(AE_ATTRIBUTE_SRC "${AE_ROOT_DIR}/aether.mm")
else()
	set(AE_ATTRIBUTE_SRC "${AE_ROOT_DIR}/aether.cpp")
endif()
add_executable(attributes Attributes.cpp "${AE_ATTRIBUTE_SRC}")
target_compile_definitions(attributes PRIVATE AE_USE_MODULES=1)
target_compile_options(attributes PUBLIC "-fmodules;-fcxx-modules")
target_compile_definitions(attributes PRIVATE AE_ENABLE_SOURCE_INFO=1)
target_include_directories(attributes PRIVATE "${AE_ROOT_DIR}")
